syntax="proto3";

package ticker;

option go_package="proto/ticker";

service TickerService{
    rpc StreamTicker(TickerRequest) returns (stream TickerUpdate);
}


message TickerRequest{
    string symbol=1;
}

message TickerUpdate{
    string exchange=1;
    string symbol=2;
    string price=3;
    string volume=4;
    int64 eventTime=5;
}